--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 0; 
 }
 
 
@@ -31,4 +31,9 @@ h1 {
 
 h3 {
     margin: 20px;
+}
+
+ul {
+    padding: 10px;
+    margin: 10px;
 }
