--- a/style.css
+++ b/style.css
@@ -39,5 +39,29 @@ ul {
 }
 
 #enterButt, #clearButt {
-    width: 50px;
+    width: 100px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #b28dff;
+    font-size: .60em;
+    font-weight: 300;
+    padding: 10px;
+    border: none;
+    
+}
+
+#controls {
+    width: 400px;
+    margin: auto;
+    padding-left: 15%;
+    font-size: 3em;
+    font-weight: 300;
+}
+
+#todos-list {
+    font-size: 1.25em;
+    list-style: square;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 75%;
 }
